<resources>
    <string name="app_name">AndroidApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_new_receipt">New receipt or guaranty</string>
    <string name="title_activity_my_receipts">My receipts and guaranties </string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_password">Confirmation Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_alias">Alias</string>
    <string name="hint_dateBuy">Date of Purchase</string>
    <string name="hint_dateEnd">Date end of Guaranty</string>
    <string name="hint_dateNotification">Set a notification date</string>


    <string name="btn_emailNotification">Email Notification</string>
    <string name="btn_smsNotification">Sms Notification</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Sign in</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_cancel">@android:string/cancel</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Login</string>
    <string name="btn_new_receipt">Add a new receipt or Guaranty</string>
    <string name="btn_my_receipts">View receipts and guaranties</string>
    <string name="btn_add_receipt">Save receipt</string>
    <string name="password_not_same">Must be the same</string>
    <string name="field_required">Required</string>
    <string name="saved_token">SAVED_TOKEN</string>
    <string name="remember_me">Remember me</string>
    <string name="action_logout">logout</string>
    <string name="label_end">End on :</string>
    <string name="label_buy">Buy on :</string>
    <string name="api_url">http://192.168.1.201:3000</string>
    <string name="label_notification">Notifications on :</string>
</resources>
