<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/alias"
            android:layout_below="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/buy_label"
            android:layout_below="@+id/alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_buy"/>
        <TextView
            android:id="@+id/buy"
            android:layout_below="@+id/alias"
            android:layout_toEndOf="@+id/buy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/end_label"
            android:layout_below="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_end"/>
        <TextView
            android:id="@+id/end"
            android:layout_below="@+id/buy"
            android:layout_toEndOf="@+id/end_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/notifications_label"
            android:layout_below="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_notification"/>
        <TextView
            android:id="@+id/notifications"
            android:layout_below="@+id/end"
            android:layout_toEndOf="@+id/notifications_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>